# files_organizer

./: .gitignore  README.md  main.py  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
files/: design.txt
files_organizer/: main.py
package/: about_window.py  how_to_use_window.py  main_window.py
src/: apps.py  views.py
src/files_organizer_colo993/: __init__.py  action.py  actions.py  extensions_data.json  files_list.py  filters.py  operations.py
tests/files_organizer_colo993/: test_action.py  test_actions.py  test_files_list.py  test_filters.py
